--- a/portfolio.html
+++ b/portfolio.html
@@ -114,7 +114,7 @@
                         <h1>Khan Academy Portfolio</h1>
                         <ul class="portfolio">
                             <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-blueberry-pie/5463328749568000/">What's for Dinner? 
-                            
+                            <li><a href = "https://www.khanacademy.org/computer-programming/spin-off-of-project-shooting-star/4604234257973248"> Shooting Star 
 
                     </div>
                     
