--- a/portfolio.html
+++ b/portfolio.html
@@ -118,7 +118,7 @@
                              <li><a href = "https://www.khanacademy.org/computer-programming/spin-off-of-the-best-ads/5938359643455488" >Project Ad Design 
                             <li><a href  = "https://www.khanacademy.org/computer-programming/spin-off-of-project-animal-attack/6519033551175680" > Project Animal Attack 
                             <li><a href  = "https://www.khanacademy.org/computer-programming/project-fish-tank/5171376303947776" >  Project FIsh Tank 
-    
+                            <li><a href =   "https://www.khanacademy.org/computer-programming/halloween-project/4586859545542656" > Halloween Project 
 
                     </div>
                     
