--- a/portfolio.html
+++ b/portfolio.html
@@ -119,6 +119,7 @@
                             <li><a href  = "https://www.khanacademy.org/computer-programming/spin-off-of-project-animal-attack/6519033551175680" > Project Animal Attack 
                             <li><a href  = "https://www.khanacademy.org/computer-programming/project-fish-tank/5171376303947776" >  Project FIsh Tank 
                             <li><a href =   "https://www.khanacademy.org/computer-programming/halloween-project/4586859545542656" > Halloween Project 
+                            <li><a href =   "https://www.khanacademy.org/computer-programming/spin-off-of-project-magic-8-ball-10/5674575119040512">  Project : 8-ball 
 
                     </div>
                     
