--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -62,7 +62,7 @@
 			//////////////////////////////////////////////////////////////////
 			
 			// TODO 2 - Variable declarations 
-			
+			var positionX = 0;
 
 			
 			/* 
@@ -71,7 +71,22 @@
 			turn it around! 
 			*/
 			function update() {
-				
+
+	// Frame 1
+positionX = 0 + 10;         // positionX = 10
+moveBoxTo(positionX);
+
+// Frame 2
+positionX = 10 + 10;         // positionX = 20
+moveBoxTo(positionX);
+
+// Frame 3
+positionX = 20 + 10;         // positionX = 30
+moveBoxTo(positionX);
+
+// Frame 4
+positionX = 30 + 10;         // positionX = 40
+moveBoxTo(positionX);
 
 			};
 
@@ -81,9 +96,11 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-				
+				positionX = 0;
+			
+		 //  increase the points variable by 1
 
-
+				 changeBoxText(points);
 			};
 		})();
 	</script>
