--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -110,11 +110,13 @@
 			*/
 			function handleBoxClick() {
 				positionX = 0;
-				speed *= 100; 
+				
 			
 		 //  increase the points variable by 1
 
 				 changeBoxText(1);
+				 if (speed + speed)
+					 speed +=3; 
 			};
 		})();
 	</script>
