--- a/projects/circularity/index.html
+++ b/projects/circularity/index.html
@@ -25,6 +25,14 @@
         <style type="text/css">
             /*override default styles here*/
         </style>
+        body {
+            background: url("background.jpg") no-repeat center center fixed;
+            background-color: #cccccc;
+            -webkit-background-size: cover;
+            -moz-background-size: cover;
+            -o-background-size: cover;
+            background-size: cover;
+        }
     </head>
     <body>
         <div>
@@ -37,5 +45,5 @@
             })();
         </script>
     </body>
-
+    
 </html>
